; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame.c_vlc_h2_stream_lookup.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_h2frame.c_vlc_h2_stream_lookup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_h2_parser = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8* (i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.vlc_h2_parser*, i32)* @vlc_h2_stream_lookup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @vlc_h2_stream_lookup(%struct.vlc_h2_parser* %0, i32 %1) #0 {
  %3 = alloca %struct.vlc_h2_parser*, align 8
  %4 = alloca i32, align 4
  store %struct.vlc_h2_parser* %0, %struct.vlc_h2_parser** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vlc_h2_parser*, %struct.vlc_h2_parser** %3, align 8
  %6 = getelementptr inbounds %struct.vlc_h2_parser, %struct.vlc_h2_parser* %5, i32 0, i32 1
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i8* (i32, i32)*, i8* (i32, i32)** %8, align 8
  %10 = load %struct.vlc_h2_parser*, %struct.vlc_h2_parser** %3, align 8
  %11 = getelementptr inbounds %struct.vlc_h2_parser, %struct.vlc_h2_parser* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i8* %9(i32 %12, i32 %13)
  ret i8* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
